fixing a problem in hero spacing problem between hero section and about section

--- a/Code/styles/style.css
+++ b/Code/styles/style.css
@@ -295,7 +295,7 @@ nav a {
 }
 
 
-.space {
+.spacee {
     height: 1vh;
 }
 
